# genesis-compress

bin64/: convertgenesis16bit-x86_64  unflacgenesis-x86_64
examples/: a.flac  a.out  a2-32bit.genflac  a2-64bit.genflac  a2.flac  a2.genflac  a2.out  a3-32bit.genflac  a3.genflac  a3.out  a8chan.flac
scripts/: gencompress.sh  genuncompress.sh
src/: DOWNLOADS  INSTALL  Makefile.in  README.dist  TODO  config.h.in  configure  configure.ac  flac2gen.c  gen2flac.c  genesis16bit.h  readgenflac.c
test/: Makefile  genflactest.m
